feat: :sparkles: add two sample overlays
The simple overlays demonstrates the usage of scoreman-react components. It makes use of react-router, and for this overlay pack to work on scoreman server, there must be SPA (redirect on 404) support on the server.

See https://github.com/ScoremanOrg/scoreman/issues/49

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,12 @@
 {
     "name": "React overlay",
     "overlays": [{
-        "name": "React in game",
-        "url": "build/index.html"
+        "name": "In game (widescreen)",
+        "index": "build/index.html",
+        "url": "/ingame-widescreen"
+    },{
+        "name": "Commentary",
+        "index": "build/index.html",
+        "url": "/commentary"
     }]
 }
