fix: :bug: fix base url issues
Now it should on any subpath, both in development mode and production

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
         "name": "In game (widescreen)",
         "url": "ingame-widescreen"
     },{
-        "name": "Commentary",
-        "url": "commentary"
+        "name": "Commentators",
+        "url": "commentators"
     }]
 }
