--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "name": "React overlay",
     "baseUrl": "build",
     "notFoundUrl": "index.html",
+    "appType": "react",
     "overlays": [{
         "name": "In game (widescreen)",
         "url": "ingame-widescreen"
